Enh#2236 second try (#2332)
* update translate

* fix tests

* add more translation

* minor fixes

* update version

* fix test

* add translate to alert and timeline status

--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layer/layer.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layer/layer.component.html
@@ -8,7 +8,7 @@
 		{{layer?.name}}
 	</ansyn-checkbox>
 
-	<span class="only-filter" (click)="selectOnly()" [hidden]="showOnly">only</span>
+	<span class="only-filter" (click)="selectOnly()" [hidden]="showOnly">{{'only' | translate}}</span>
 
 	<ng-content></ng-content>
 
