--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.html
@@ -11,7 +11,7 @@
 	<button
 		*ngIf="mapsAmount > 1"
 		class="drag-me"
-		tooltip-value="Move"
+		[attr.tooltip-value]="'Move' | translate"
 		tooltip-class="bottom"
 		(mousedown)="onMove.emit($event)">
 		<i class="fa fa-arrows"></i>
@@ -19,7 +19,7 @@
 
 	<button *ngIf="mapsAmount > 1"
 			class="small-icon-button link-maps"
-			tooltip-value="Momentarily link screens"
+			[attr.tooltip-value]="'Momentarily link screens' | translate"
 			[attr.tooltip-class]="mapsAmount > 1 ? 'bottom right' : 'top right'"
 			[disabled]="noGeoRegistration"
 			(click)="toggleMapSynchronization.emit()">
@@ -28,7 +28,7 @@
 
 	<button class="small-icon-button hide-layers"
 			(click)="toggleMapLayers()"
-			tooltip-value="Show/ Hide layers"
+			[attr.tooltip-value]="'Show/ Hide layers' | translate"
 			[attr.tooltip-class]="mapsAmount > 1 ? 'bottom right' : 'top right'">
 		<i [class.icon-main-data-layers]="displayLayers"
 		   [class.icon-layers-hide]="!displayLayers"></i>
@@ -47,11 +47,11 @@
 	<ansyn-popover *ngIf="overlay" [text]="overlayDescription"
 				   [popDirection]="mapsAmount > 1 ? 'bottom wrap' : 'top wrap'">
 		<button class="share-link" (click)="copyOverlayDescription()">
-			<span>{{overlayDescription}}</span>
+			<span>{{overlayDescription | translate}}</span>
 		</button>
 	</ansyn-popover>
 	<div *ngIf="!overlay">
-		{{baseMapDescription}}
+		{{baseMapDescription | translate}}
 	</div>
 </div>
 
