--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.html
@@ -1,7 +1,7 @@
 <div class="selected-layer"
 	 *ngIf="(annotationLayerIds$ | async)?.length > 1">
 	<div>
-		Layer:
+		{{'Layer' | translate}}:
 		<select class="active-annotation-layer" (change)="setSelectedAnnotationLayer($event.target.value)">
 			<option
 				[selected]="(activeAnnotationLayer$ | async) === layer?.id"
@@ -19,7 +19,7 @@
 		[class.mode-on]="mode === annotationMode"
 		(click)="setAnnotationMode(annotationMode)">
 		<span
-			class="icon-annotation-{{annotationMode.toLowerCase()}}" [attr.tooltip-value]="annotationMode"
+			class="icon-annotation-{{annotationMode.toLowerCase()}}" [attr.tooltip-value]="annotationMode | translate"
 			tooltip-class="bottom">
 		</span>
 	</li>
@@ -32,7 +32,7 @@
 
 		<button (click)="toggleSelection(SelectionBoxTypes.LineWidth)"
 				[class.expand]="selectedBox === SelectionBoxTypes.LineWidth">
-			<span class="icon-annotation-weight" tooltip-value="Width" tooltip-class="bottom"></span>
+			<span class="icon-annotation-weight" [attr.tooltip-value]="'Width' | translate" tooltip-class="bottom"></span>
 		</button>
 
 		<ansyn-annotations-weight
@@ -46,7 +46,7 @@
 
 		<button (click)="toggleSelection(SelectionBoxTypes.ColorPicker)"
 				[class.expand]="selectedBox === SelectionBoxTypes.ColorPicker">
-			<span class="icon-annotation-color" tooltip-value="Color" tooltip-class="bottom"></span>
+			<span class="icon-annotation-color" [attr.tooltip-value]="'Color' | translate" tooltip-class="bottom"></span>
 		</button>
 
 		<ansyn-annotations-color
