add translate to measure control

--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.html
@@ -2,16 +2,16 @@
 	<div
 		*ngIf="show"
 		[class.measure]="show">
-		<p>Measure distance</p>
+		<p>{{'Measure distance' | translate}}</p>
 
 		<button
 			(click)="clearMeasure()">
-			<span class="bold">Clear</span>
+			<span class="bold">{{'Clear' | translate}}</span>
 		</button>
 
 		<button
 			(click)="done()">
-			<span class="bold">Done</span>
+			<span class="bold">{{'Done' | translate}}</span>
 		</button>
 	</div>
 
