update class name

--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.html
@@ -6,12 +6,12 @@
 
 		<button
 			(click)="clearMeasure()">
-			<span class="bold">{{'Clear' | translate}}</span>
+			<span class="bold-on-hover">{{'Clear' | translate}}</span>
 		</button>
 
 		<button
 			(click)="done()">
-			<span class="bold">{{'Done' | translate}}</span>
+			<span class="bold-on-hover">{{'Done' | translate}}</span>
 		</button>
 	</div>
 
