--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.html
@@ -2,7 +2,7 @@
 	<div
 		*ngIf="show"
 		[class.measure]="show">
-		<p>{{'Measure distance' | translate}}</p>
+		<p>{{'Measure Distance' | translate}}</p>
 
 		<button
 			(click)="clearMeasure()">
