add measure control (#2308)
* add measure control

* add test to measure control

* add env var and update style

* add translate to measure control

* update class name

* update label

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -294,7 +294,7 @@
       }
     ],
     "ShadowMouse": {
-    	"activeByDefault": false
+    	"activeByDefault": {{ getv "/ansyn/is/shadow/active" "false"}}
     }
   },
   "loggerConfig": {
