--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -168,7 +168,7 @@
 		"url": "http://dev.virtualearth.net/REST/v1/Locations?locality=$searchString&maxResults=1&key=$apiKey",
 		"apiKey": "AofqJGk-uEej_Pv7hkbpXh6H3pb54luGZj6lfe90ksZEoBY-JmgTwGE2s9TF6peC"
 	},
-	"floatingPositionSuffix": ""
+	"floatingPositionSuffix": "{{ getv "/ansyn/floation/position/suffix" "" }}"
   },
   "mapProvidersConfig": {
   	"openLayersMap": {
