--- a/src/app/@ansyn/ansyn/modules/core/forms/file-input/file-input.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/forms/file-input/file-input.component.html
@@ -4,8 +4,7 @@
 	   [accept]="accept"
 	   [multiple]="multiple"
 	   [disabled]="disabled"
-	   [(ngModel)]="value"
-	   (change)="change.emit($event)"/>
+	   [(ngModel)]="value" />
 
 <label [for]="id">
 	<span class="placeholder">{{placeholder}}</span>
