login title env variable

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -364,6 +364,7 @@
   },
   "loginConfig": {
   	"baseUrl": "{{ getv "/ansyn/login/baseurl" "http://platform.ansyn.io:9001/api/v1/login" }}",
+  	"title": "{{ getv "/ansyn/login/title" "AnSyn" }}",
   	"active":  {{ getv "/ansyn/login/active" "false" }},
   	"authorizedPath": "/"
   },
