export the maps as png

--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -24,3 +24,5 @@
 <button (click)="setAnnotationsWithIcons()"> Set Annotations with icons</button>
 
 <button (click)="getOverlayData()">Get overlay data</button>
+
+<ansyn-imagery-export></ansyn-imagery-export>
