add setRotation function to ansyn api

--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -25,4 +25,6 @@
 
 <button (click)="getOverlayData()">Get overlay data</button>
 
+<button (click)="this.ansynApi.setRotation(100)">Set rotation</button>
+
 <ansyn-imagery-export></ansyn-imagery-export>
