--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/array-filter-container/array-filter-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/array-filter-container/array-filter-container.component.less
@@ -9,7 +9,7 @@ div.array-filter-wrapper {
 		display: flex;
 		input[type=checkbox]:checked + label {
 			background: white;
-			color: @application-main-color;
+			color: @application-primary-color;
 		}
 		input[type=checkbox] {
 			display: none;
@@ -28,7 +28,7 @@ div.array-filter-wrapper {
 			height: 22px;
 			&:hover {
 				background: white;
-				color: @application-main-color;
+				color: @application-primary-color;
 			}
 			&:not(:last-child) {
 				margin-right: 10px;
