--- a/src/app/@ansyn/ansyn/modules/status-bar/components/timeline-timepicker/timeline-timepicker.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/timeline-timepicker/timeline-timepicker.component.less
@@ -1,19 +1,18 @@
 @import "ansyn/less/common";
+@import "ansyn/less/colors";
 
 :host {
 	color: white;
 	transition: .4s;
 	position: absolute;
 	display: flex;
-	box-shadow: 0 0 2px 1px white;
-	background: black;
+	background: @background-color-0;
 	width: 230px;
 	height: 97px;
 	padding: 12px;
 	flex-direction: column;
-	top: 0;
+	bottom: 35px;
 	right: 0;
-	transform: translate(0, calc(~'-100% - 15px'));
 }
 
 .time-row {
@@ -39,7 +38,6 @@
 		justify-content: space-around;
 		align-items: center;
 		background: white;
-		border: 1px solid dimgrey;
 		font-size: 12px;
 		color: white;
 		.icon-status-bar-time {
@@ -71,7 +69,7 @@ div.control-buttons {
 	margin-top: 10px;
 	display: flex;
 	justify-content: space-between;
-	color: @application-contrast-color;
+	color: @application-primary-color;
 	a {
 		cursor: pointer;
 		&:hover {
