--- a/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/tree-view/tree-view.component.less
@@ -1,12 +1,12 @@
+@import "ansyn/less/colors";
 @import "ansyn/less/common";
 @import "ansyn/less/z-index-globals";
 
 :host {
 	position: absolute;
-	top: 0;
+	bottom: 35px;
 	left: 0;
 	min-width: 170px;
-	transform: translateY(calc(~'-100% - 15px'));
 
 	/deep/ .treeview-container .row-item {
 		display: flex;
@@ -14,10 +14,9 @@
 	}
 
 	.data-input-filter {
-		background: rgba(0, 0, 0, 1);
+		background: @background-color-0;
 		background-clip: padding-box;
 		padding: 10px 20px;
-		box-shadow: 0 0 2px 1px white;
 	}
 
 	.tree-view-main {
@@ -31,7 +30,7 @@
 		button {
 			background: transparent;
 			border: none;
-			color: @application-contrast-color;
+			color: @application-primary-color;
 			&:disabled {
 				cursor: default;
 				pointer-events: none;
@@ -41,11 +40,9 @@
 		margin-top: 10px;
 		display: flex;
 		justify-content: space-between;
-		color: @application-contrast-color;
+		color: @application-primary-color;
 		div {
 			button {
-				a {
-				}
 				cursor: pointer;
 				&:hover:not(:disabled) {
 					font-weight: bold;
