--- a/src/app/@ansyn/ansyn/modules/overlays/components/overlay-timeline-status/overlay-timeline-status.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/components/overlay-timeline-status/overlay-timeline-status.component.less
@@ -1,9 +1,10 @@
 @import "ansyn/less/common";
+@import "ansyn/less/colors";
 @import "ansyn/less/z-index-globals";
 
 .overlays-status {
 	position: absolute;
-	top: 0;
+	top: 15px;
 	left: 0;
 	width: 100%;
 	height: 100%;
@@ -13,14 +14,12 @@
 	background: rgba(red(@application-contrast-color), green(@application-contrast-color), blue(@application-contrast-color), 0.1);
 	color: @background-color-1;
 	font-size: 15px;
-	background: rgba(0, 0, 0, 0.38);
+	background: @background-color-0;
 	.text-container {
 		position: relative;
 		top: -10px;
-		background: rgba(255, 255, 255, 1);
+		background: white;
 		padding: 7px 50px;
-		border: 0.5px solid @background-color-1;
-		box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24);
 		border-radius: 2px;
 		button.close {
 			position: absolute;
