--- a/src/app/@ansyn/ansyn/modules/overlays/components/overlay-source-type-notice/overlay-source-type-notice.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/components/overlay-source-type-notice/overlay-source-type-notice.component.less
@@ -1,6 +1,6 @@
 @status-bar-height: 35px;
 @source-type-notice-width: 40%;
-@z-index-overlay-source-type-notice: 3;
+@z-index-overlay-source-type-notice: 1;
 
 :host {
 	position: absolute;
@@ -28,6 +28,14 @@
 	&.layout1 {
 		:host {
 			bottom: @status-bar-height;
+
+			.with-collapse {
+				margin-bottom: 20px;
+			}
+
+			.collapse-click {
+				margin-bottom: -14px;
+			}
 		}
 	}
 
@@ -41,7 +49,16 @@
 		div.map-container-wrapper:last-child {
 			:host {
 				bottom: @status-bar-height;
+
+				.with-collapse {
+					margin-bottom: 20px;
+				}
+
+				.collapse-click {
+					margin-bottom: -14px;
+				}
 			}
+
 		}
 	}
 
