--- a/src/app/@ansyn/ansyn/modules/core/components/manual-removed-overlays/manual-removed-overlays.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/manual-removed-overlays/manual-removed-overlays.component.less
@@ -35,8 +35,7 @@ div.removed-show-hide {
 	font-size: 12px;
 	font-style: normal;
 	color: rgba(255, 255, 255, 0.75);
-	margin-top: 5px;
-	margin-right: 7px;
+	margin: 5px 7px;
 	cursor: pointer;
 }
 
