fix minimize footer button not in the middle

--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
@@ -19,6 +19,7 @@
 			</ansyn-imagery-container>
 
 			<div class="active-border"
+				 [class.footer-collapsed]="document.querySelector('.status-timeline-container.collapsed')"
 				 [class.active]="activeMapId === mapId">
 			</div>
 		</div>
