fix test & add icon

--- a/src/app/@ansyn/map-facade/components/imagery-export/imagery-export.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-export/imagery-export.component.html
@@ -1,3 +1,8 @@
-<button (click)="exportMap()">
-	Export
-</button>
+<div class="export-maps-tool">
+	<button tooltip-class="right"
+			[attr.tooltip-value]="'Export maps' | translate"
+			(click)="exportMaps()"
+	>
+		<i class="icon-export-maps"></i>
+	</button>
+</div>
