change color & weight icon

--- a/src/app/@ansyn/ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/ansyn/assets/styles/icons.css
@@ -247,11 +247,11 @@
 }
 
 .icon-annotation-weight:before {
-	content: "\e933";
+	content: "\e94e";
 }
 
 .icon-annotation-color:before {
-	content: "\e932";
+	content: "\e94f";
 }
 
 .icon-annotation-label:before {
