--- a/src/app/@ansyn/ansyn/modules/core/forms/ansyn-input/ansyn-input.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/forms/ansyn-input/ansyn-input.component.html
@@ -5,5 +5,6 @@
 		   [placeholder]="label"
 		   [autocomplete]="autocomplete"
 		   (blur)="onBlur()"
+		   [disabled]="disabled"
 		   [(ngModel)]="value">
 </mat-form-field>
