--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
@@ -81,6 +81,13 @@
 		</button>
 	</div>
 
-	<ansyn-imagery-export></ansyn-imagery-export>
+	<div class="export-maps-tool">
+		<button tooltip-class="right"
+				[attr.tooltip-value]="'Export maps' | translate"
+				(click)="exportMaps()"
+		>
+			<i class="icon-export-maps"></i>
+		</button>
+	</div>
 
 </div>
