export the maps as png (#2364)
* export the maps as png

* some fix

* get context from disabled map if can

* fix function

* fix test & add icon

* change color & weight icon

* label icon

* clean code

* export as service

* cleaner code

* fix tests

--- a/src/app/@ansyn/ansyn/assets/styles/icons.css
+++ b/src/app/@ansyn/ansyn/assets/styles/icons.css
@@ -247,15 +247,15 @@
 }
 
 .icon-annotation-weight:before {
-	content: "\e933";
+	content: "\e94e";
 }
 
 .icon-annotation-color:before {
-	content: "\e932";
+	content: "\e94f";
 }
 
 .icon-annotation-label:before {
-	content: "\e930";
+	content: "\e950";
 }
 
 .icon-annotation-duplicate:before {
@@ -332,4 +332,8 @@
 
 .icon-show-menu:before {
 	content: '\e92a';
+}
+
+.icon-export-maps:before {
+	content: '\e92b'
 }
