api is protected

--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -25,4 +25,4 @@
 
 <button (click)="getOverlayData()">Get overlay data</button>
 
-<button (click)="this.ansynApi.setRotation(100)">Set rotation</button>
+<button (click)="rotate()">Set rotation</button>
