add margin-bottom (#2366)
* add margin-bottom

* fix test

* switch classes

* build lib fix

--- a/src/app/@ansyn/ansyn/modules/overlays/components/overlay-source-type-notice/overlay-source-type-notice.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/components/overlay-source-type-notice/overlay-source-type-notice.component.html
@@ -1,4 +1,6 @@
 <div [hidden]="!title" class="overlay-source-type-notice"
+	 [class.with-collapse]="isFooterCollapsible"
+	 [class.collapse-click]="!isFooterCollapsible"
 	 [attr.tooltip-value]="title"
 	 tooltip-class="top wrap">{{title}}
 </div>
