move collapse to action

--- a/src/app/@ansyn/ansyn/components/ansyn-footer/ansyn-footer.component.html
+++ b/src/app/@ansyn/ansyn/components/ansyn-footer/ansyn-footer.component.html
@@ -2,8 +2,9 @@
 	<button
 		*ngIf="config?.isFooterCollapsible"
 		class="hide-menu"
-		(click)="startToggleCollapse()"
-		title="Hide menu">
+		(click)="toggle()"
+		[attr.tooltip-value]="'Hide menu' | translate"
+		tooltip-class="top">
 		<i class="fa fa-caret-down" [class.fa-caret-up]="collapse"></i>
 	</button>
 
