--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
@@ -1,6 +1,7 @@
 <div class="imageries-container"
 	 #imageriesContainer
-	 [ngClass]="{'pin-location': pinLocationMode}">
+	 [ngClass]="{'pin-location': pinLocationMode}"
+	 [class.footer-collapsed]="document.querySelector('.status-timeline-container.collapsed')">
 
 	<ng-template [ngIf]="ids.length">
 		<div *ngFor="let mapId of ids; count as count"
@@ -19,7 +20,6 @@
 			</ansyn-imagery-container>
 
 			<div class="active-border"
-				 [class.footer-collapsed]="document.querySelector('.status-timeline-container.collapsed')"
 				 [class.active]="activeMapId === mapId">
 			</div>
 		</div>
