--- a/src/app/@ansyn/ansyn/modules/overlays/components/overlay-source-type-notice/overlay-source-type-notice.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/components/overlay-source-type-notice/overlay-source-type-notice.component.html
@@ -1,6 +1,6 @@
 <div [hidden]="!title" class="overlay-source-type-notice"
-	 [class.with-collapse]="isFooterCollapsible"
-	 [class.collapse-click]="!isFooterCollapsible"
+	 [class.collapse-enable]="config.isFooterCollapsible"
+	 [class.footer-collapse]="footerCollapse"
 	 [attr.tooltip-value]="title"
 	 tooltip-class="top wrap">{{title}}
 </div>
