--- a/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filters-collection/filters-collection.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/filters/components/filters-collection/filters-collection.component.html
@@ -5,7 +5,7 @@
 	</ansyn-slider-checkbox>
 
 	<ansyn-input
-		[ngModel]="filtersSearch"
+		[ngModel]="filtersSearch$ | async"
 		(ngModelChange)="setFiltersSearch($event)"
 		[white]="true"
 		name="search"
