rename to exportMapsToPng

--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -25,4 +25,4 @@
 
 <button (click)="getOverlayData()">Get overlay data</button>
 
-<button (click)="rotate()">Set rotation</button>
+<button (click)="setRotation()">Set rotation</button>
