--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/tools/tools.component.html
@@ -84,7 +84,7 @@
 	<div class="export-maps-tool">
 		<button tooltip-class="right"
 				[attr.tooltip-value]="'Export maps' | translate"
-				(click)="exportMaps()"
+				(click)="exportMapsToPng()"
 		>
 			<i class="icon-export-maps"></i>
 		</button>
