add 3d button if enabled in config

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -334,7 +334,8 @@
 	   	}
     },
 	 "httpTimeout": "3000",
-	 "isFooterCollapsible": {{ getv "/ansyn/iscollapsible" "false" }}
+	 "isFooterCollapsible": {{ getv "/ansyn/iscollapsible" "false" }},
+	 "enable3D": true
   },
   "olConfig": {
   	 "needToUseLayerExtent": false,
