--- a/src/app/@ansyn/ansyn/modules/plugins/components/imagery-dimension-mode/imagery-dimension-mode.component.less
+++ b/src/app/@ansyn/ansyn/modules/plugins/components/imagery-dimension-mode/imagery-dimension-mode.component.less
@@ -8,7 +8,10 @@
 	z-index: 1;
 	background-color: rgba(0, 0, 0, 0.3);
 	color: white;
-	padding: 4px;
+
+	.show {
+		padding: 4px;
+	}
 
 	.buttons {
 		line-height: 0;
