--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -24,3 +24,9 @@
 <button (click)="setAnnotationsWithIcons()"> Set Annotations with icons</button>
 
 <button (click)="getOverlayData()">Get overlay data</button>
+
+<label>collapse footer
+<select (change)="footerCollapse($event.target.value)">
+	<option value="false" selected>false</option>
+	<option value="true">true</option>
+</select></label>
