fix minimize footer button not in the middle (#2369)
* fix minimize footer button not in the middle

* move collapse to action

* move action to map

* fix imports in test

* pass collapse as payload

* fix imports and typo

--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
@@ -1,6 +1,7 @@
 <div class="imageries-container"
 	 #imageriesContainer
-	 [ngClass]="{'pin-location': pinLocationMode}">
+	 [ngClass]="{'pin-location': pinLocationMode}"
+	 [class.footer-collapsed]="footerCollapse">
 
 	<ng-template [ngIf]="ids.length">
 		<div *ngFor="let mapId of ids; count as count"
