--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
@@ -52,6 +52,7 @@
 			bottom: 0;
 			height: 32px;
 		}
+
 		/deep/ .ol-scale-line-inner {
 			margin-top: 16px;
 		}
@@ -62,6 +63,7 @@
 
 		/deep/ .ol-scale-line {
 			min-width: 144px;
+			display: inline-block;
 		}
 
 		/deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
@@ -86,6 +88,7 @@
 				left: 0;
 				width: 100%;
 				height: 100%;
+
 				div.active-border {
 					display: none;
 				}
@@ -104,37 +107,58 @@
 			div.map-container-wrapper {
 				width: 50%;
 				height: 100%;
+
 				&:nth-child(1) {
 					top: 0;
 					left: 0;
+
+					/deep/ .ol-attribution {
+						bottom: 60px;
+					}
 				}
+
 				&:nth-child(2) {
 					top: 0;
 					left: 50%;
 				}
+
 				div.active-border {
 					height: @height-minus-status;
 				}
 			}
 
 		}
+
 		&.layout3 {
 			flex-direction: column;
+
 			div.map-container-wrapper {
 				width: 100%;
 				height: 50%;
+
 				&:nth-child(1) {
 					top: 0;
 					left: 0;
+
+					/deep/ .ol-attribution {
+						bottom: 5px;
+					}
 				}
+
 				&:nth-child(2) {
 					top: 50%;
 					left: 0;
+
+					/deep/ .ol-attribution {
+						bottom: 40px;
+					}
 				}
+
 				&:last-child {
 					div.active-border {
 						height: @height-minus-status;
 					}
+
 					/deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 						bottom: @status-bar-height;
 					}
@@ -145,18 +169,26 @@
 				}
 			}
 		}
+
 		&.layout4 {
 			div.map-container-wrapper {
 				width: 50%;
 				height: 50%;
+
 				&:first-child {
 					width: 50%;
 					height: 100%;
+
+					/deep/ .ol-attribution {
+						bottom: 60px;
+					}
 				}
+
 				&:first-child, &:last-child {
 					div.active-border {
 						height: @height-minus-status;
 					}
+
 					/deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 						bottom: @status-bar-height;
 					}
@@ -165,33 +197,45 @@
 						bottom: 55px;
 					}
 				}
+
 				&:nth-child(1) {
 					top: 0;
 					left: 0;
 				}
+
 				&:nth-child(2) {
 					top: 0;
 					left: 50%;
+
+					/deep/ .ol-attribution {
+						bottom: 5px;
+					}
 				}
+
 				&:nth-child(3) {
 					top: 50%;
 					left: 50%;
 				}
 			}
+
 			flex-direction: column;
 		}
+
 		&.layout5 {
 			div.map-container-wrapper {
 				width: 50%;
 				height: 50%;
+
 				&:first-child {
 					width: 100%;
 					height: 50%;
 				}
+
 				&:not(:first-child) {
 					div.active-border {
 						height: @height-minus-status;
 					}
+
 					/deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 						bottom: @status-bar-height;
 					}
@@ -200,28 +244,48 @@
 						bottom: 55px;
 					}
 				}
+
 				&:nth-child(1) {
 					top: 0;
 					left: 0;
+
+					/deep/ .ol-attribution {
+						bottom: 5px;
+					}
 				}
+
 				&:nth-child(2) {
 					top: 50%;
 					left: 0;
+
+					/deep/ .ol-attribution {
+						bottom: 60px;
+					}
 				}
+
 				&:nth-child(3) {
 					top: 50%;
 					left: 50%;
 				}
 			}
 		}
+
 		&.layout6 {
 			div.map-container-wrapper {
 				width: 50%;
 				height: 50%;
+
+				&:nth-child(1), &:nth-child(2) {
+					/deep/ .ol-attribution {
+						bottom: 5px;
+					}
+				}
+
 				&:nth-child(3), &:nth-child(4) {
 					div.active-border {
 						height: @height-minus-status;
 					}
+
 					/deep/ .ol-scale-line, /deep/ ansyn-sentinel-combo-box { /* TODO: remove ansyn-sentinel-combo-box style*/
 						bottom: @status-bar-height;
 					}
@@ -230,18 +294,244 @@
 						bottom: 55px;
 					}
 				}
+
 				&:nth-child(1) {
 					top: 0;
 					left: 0;
 				}
+
 				&:nth-child(2) {
 					top: 0;
 					left: 50%;
 				}
+
 				&:nth-child(3) {
 					top: 50%;
 					left: 0;
+
+					/deep/ .ol-attribution {
+						bottom: 60px;
+					}
 				}
+
+				&:nth-child(4) {
+					top: 50%;
+					left: 50%;
+				}
+			}
+		}
+	}
+
+	div.footer-collapsed {
+		&.layout1 {
+			/deep/ .ol-scale-line, /deep/ .ol-attribution {
+				bottom: 5px;
+			}
+
+			/deep/ ansyn-imagery-mouse-coordinates {
+				bottom: 25px;
+			}
+		}
+
+		&.layout2 {
+			/deep/ .ol-scale-line, /deep/ .ol-attribution {
+				bottom: 5px;
+			}
+
+			/deep/ ansyn-imagery-mouse-coordinates {
+				bottom: 25px;
+			}
+
+			div.map-container-wrapper {
+				width: 50%;
+				height: 100%;
+
+				&:nth-child(1) {
+					top: 0;
+					left: 0;
+
+					/deep/ .ol-attribution {
+						bottom: 25px;
+					}
+				}
+
+				&:nth-child(2) {
+					top: 0;
+					left: 50%;
+				}
+
+				div.active-border {
+					height: 100%;
+				}
+			}
+
+		}
+
+		&.layout3 {
+			flex-direction: column;
+
+			div.map-container-wrapper {
+				width: 100%;
+				height: 50%;
+
+				/deep/ .ol-scale-line, /deep/ .ol-attribution {
+					bottom: 5px;
+				}
+
+				&:nth-child(1) {
+					top: 0;
+					left: 0;
+				}
+
+				&:nth-child(2) {
+					top: 50%;
+					left: 0;
+				}
+
+				&:last-child {
+
+					div.active-border {
+						height: 100%;
+					}
+					/deep/ .ol-scale-line, /deep/ .ol-attribution {
+						bottom: 5px;
+					}
+
+					/deep/ ansyn-imagery-mouse-coordinates {
+						bottom: 25px;
+					}
+				}
+			}
+		}
+
+		&.layout4 {
+			div.map-container-wrapper {
+				width: 50%;
+				height: 50%;
+
+				&:first-child {
+					width: 50%;
+					height: 100%;
+				}
+
+				&:first-child, &:last-child {
+					div.active-border {
+						height: 100%;
+					}
+
+					/deep/ .ol-scale-line, /deep/ .ol-attribution {
+						bottom: 5px;
+					}
+
+					/deep/ ansyn-imagery-mouse-coordinates {
+						bottom: 25px;
+					}
+				}
+
+				&:nth-child(1) {
+					top: 0;
+					left: 0;
+
+					/deep/ .ol-attribution{
+						bottom: 25px;
+					}
+				}
+
+				&:nth-child(2) {
+					top: 0;
+					left: 50%;
+				}
+
+				&:nth-child(3) {
+					top: 50%;
+					left: 50%;
+				}
+			}
+
+			flex-direction: column;
+		}
+
+		&.layout5 {
+			div.map-container-wrapper {
+				width: 50%;
+				height: 50%;
+
+				&:first-child {
+					width: 100%;
+					height: 50%;
+				}
+
+				&:not(:first-child) {
+					div.active-border {
+						height: 100%;
+					}
+
+					/deep/ .ol-scale-line, /deep/ .ol-attribution {
+						bottom: 5px;
+					}
+
+					/deep/ ansyn-imagery-mouse-coordinates {
+						bottom: 25px;
+					}
+				}
+
+				&:nth-child(1) {
+					top: 0;
+					left: 0;
+				}
+
+				&:nth-child(2) {
+					top: 50%;
+					left: 0;
+					/deep/ .ol-attribution {
+						bottom: 25px;
+					}
+				}
+
+				&:nth-child(3) {
+					top: 50%;
+					left: 50%;
+				}
+			}
+		}
+
+		&.layout6 {
+			div.map-container-wrapper {
+				width: 50%;
+				height: 50%;
+
+				&:nth-child(3), &:nth-child(4) {
+					div.active-border {
+						height: 100%;
+					}
+
+					/deep/ .ol-scale-line, /deep/ .ol-attribution {
+						bottom: 5px;
+					}
+
+					/deep/ ansyn-imagery-mouse-coordinates {
+						bottom: 25px;
+					}
+				}
+
+				&:nth-child(1) {
+					top: 0;
+					left: 0;
+				}
+
+				&:nth-child(2) {
+					top: 0;
+					left: 50%;
+				}
+
+				&:nth-child(3) {
+					top: 50%;
+					left: 0;
+					/deep/ .ol-attribution {
+						bottom: 25px;
+					}
+				}
+
 				&:nth-child(4) {
 					top: 50%;
 					left: 50%;
@@ -259,6 +549,7 @@
 					.buttons button.back-to-world-view {
 						font-size: 0;
 						overflow: visible;
+
 						i {
 							font-size: 13.33px;
 						}
