--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -26,3 +26,12 @@
 <button (click)="getOverlayData()">Get overlay data</button>
 
 <button (click)="setRotation()">Set rotation</button>
+
+<label>collapse footer
+<select (change)="footerCollapse($event.target.value)">
+	<option value="false" selected>false</option>
+	<option value="true">true</option>
+</select>
+</label>
+
+
