prevent annotation deletion

--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
@@ -82,7 +82,7 @@
 						></ansyn-annotations-color>
 					</p>
 				</li>
-				<li>
+				<li *ngIf="!getFeatureProps(featureId)?.undeletable">
 					<button class='removeFeature' (click)="removeFeature(featureId)">
 						<i [attr.tooltip-value]="'Delete' | translate" tooltip-class="bottom">
 							<svg viewBox="0 0 1024 1024">
