--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -26,3 +26,5 @@
 <button (click)="getOverlayData()">Get overlay data</button>
 
 <button (click)="setRotation()">Set rotation</button>
+
+<button (click)="undeletableAnnotations()">Add undeletable annotation</button>
