--- a/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-container/imagery-container.component.less
@@ -14,8 +14,7 @@
 	}
 
 	/deep/ .ol-scale-line {
-		background: rgba(0, 0, 0, 0.3);
-		border-radius: 0;
+		background-color: transparent;
 		bottom: 0;
 		left: 0;
 		padding: 3px;
