--- a/src/app/@ansyn/map-facade/less/map-facade.less
+++ b/src/app/@ansyn/map-facade/less/map-facade.less
@@ -27,5 +27,6 @@
 @z-index-map-rotation: 2;
 @z-index-imagery-status: 3;
 @map-search-box-width: 100px;
+@scale-line-height: 32px;
 @z-index-toast: 5000;
 @menu-width: 90px;
