--- a/src/app/app/sentinel/sentinel-combo-box/sentinel-combo-box.component.less
+++ b/src/app/app/sentinel/sentinel-combo-box/sentinel-combo-box.component.less
@@ -18,4 +18,24 @@
 	}
 }
 
+div.imageries-container {
+	:host {
+		bottom: 0;
+	}
 
+	&.layout1, &.layout2, &.layout3, &.layout4, &.layout5, &.layout6   {
+		:host {
+			left: 0;
+			bottom: @status-bar-height;
+		}
+	}
+}
+
+div.footer-collapsed {
+	&.layout1, &.layout2, &.layout3, &.layout4, &.layout5, &.layout6   {
+		:host {
+			left: 0;
+			bottom: 35px;
+		}
+	}
+}
