--- a/src/app/@ansyn/menu/menu/menu.component.html
+++ b/src/app/@ansyn/menu/menu/menu.component.html
@@ -39,7 +39,8 @@
 			*ngIf="menuConfig?.isCollapsible"
 			class="hide-menu"
 			(click)="startToggleMenuCollapse()"
-			title="Hide menu">
+			[attr.tooltip-value]="'Hide menu' | translate"
+			tooltip-class="right">
 			<i class="fa fa-caret-left" [class.fa-caret-right]="collapse"></i>
 		</button>
 
