--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.html
@@ -1,7 +1,9 @@
 <div class="imageries-container"
 	 #imageriesContainer
 	 [ngClass]="{'pin-location': pinLocationMode}"
-	 [class.footer-collapsed]="footerCollapse">
+	 [class.collapsable]="collapsable"
+	 [class.footer-collapsed]="footerCollapse"
+	>
 
 	<ng-template [ngIf]="ids.length">
 		<div *ngFor="let mapId of ids; count as count"
