--- a/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
+++ b/src/app/@ansyn/map-facade/components/imageries-manager/imageries-manager.component.less
@@ -7,6 +7,46 @@
 	height: 100%;
 	width: 100%;
 
+	div.collapsable {
+		&.layout2 {
+			&:nth-child(1) {
+				top: 0;
+				left: 0;
+
+				/deep/ .ol-attribution {
+					bottom: 60px;
+				}
+			}
+		}
+
+		&.layout4 {
+			div.map-container-wrapper {
+				/deep/ .ol-attribution {
+					bottom: 60px;
+				}
+			}
+		}
+
+		&.layout5 {
+			div.map-container-wrapper {
+				&:nth-child(2) {
+					/deep/ .ol-attribution {
+						bottom: 60px;
+					}
+				}
+			}
+		}
+		&.layout6 {
+			div.map-container-wrapper {
+				&:nth-child(3) {
+					/deep/ .ol-attribution {
+						bottom: 60px;
+					}
+				}
+			}
+		}
+	}
+
 	div.imageries-container {
 		position: relative;
 		display: flex;
@@ -49,7 +89,7 @@
 		}
 
 		/deep/ .ol-scale-line {
-			bottom: 0;
+			bottom: 5px;
 			height: @scale-line-height;
 		}
 
@@ -69,7 +109,6 @@
 			/deep/ .ol-scale-line {
 				bottom: @status-bar-height;
 			}
-
 
 
 			div.map-container-wrapper {
@@ -96,10 +135,6 @@
 				&:nth-child(1) {
 					top: 0;
 					left: 0;
-
-					/deep/ .ol-attribution {
-						bottom: 60px;
-					}
 				}
 
 				&:nth-child(2) {
@@ -159,10 +194,6 @@
 				&:first-child {
 					width: 50%;
 					height: 100%;
-
-					/deep/ .ol-attribution {
-						bottom: 60px;
-					}
 				}
 
 				&:first-child, &:last-child {
@@ -230,10 +261,6 @@
 				&:nth-child(2) {
 					top: 50%;
 					left: 0;
-
-					/deep/ .ol-attribution {
-						bottom: 60px;
-					}
 				}
 
 				&:nth-child(3) {
@@ -277,10 +304,6 @@
 				&:nth-child(3) {
 					top: 50%;
 					left: 0;
-
-					/deep/ .ol-attribution {
-						bottom: 60px;
-					}
 				}
 
 				&:nth-child(4) {
@@ -354,6 +377,7 @@
 					div.active-border {
 						height: 100%;
 					}
+
 					/deep/ .ol-scale-line, /deep/ .ol-attribution {
 						bottom: 5px;
 					}
@@ -385,7 +409,7 @@
 					top: 0;
 					left: 0;
 
-					/deep/ .ol-attribution{
+					/deep/ .ol-attribution {
 						bottom: 25px;
 					}
 				}
@@ -432,6 +456,7 @@
 				&:nth-child(2) {
 					top: 50%;
 					left: 0;
+
 					/deep/ .ol-attribution {
 						bottom: 25px;
 					}
@@ -449,13 +474,14 @@
 				width: 50%;
 				height: 50%;
 
+
+				/deep/ .ol-scale-line, /deep/ .ol-attribution {
+					bottom: 5px;
+				}
+
 				&:nth-child(3), &:nth-child(4) {
 					div.active-border {
 						height: 100%;
-					}
-
-					/deep/ .ol-scale-line, /deep/ .ol-attribution {
-						bottom: 5px;
 					}
 				}
 
