update select style

--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.less
@@ -32,7 +32,7 @@
 			overflow: hidden;
 
 			select.active-annotation-layer {
-				background: transparent;
+				background: @application-main-color;
 				border: none;
 				color: white;
 				outline: none;
@@ -42,7 +42,7 @@
 				appearance: none;
 				padding-right: 18px;
 				option {
-					color: black;
+					color: white;
 				}
 			}
 		}
